--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -2,56 +2,98 @@
 
 .about {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  top: 5%;
   background: $dark-gray;
   color: $white;
-  top: 30%;
   padding: 1rem;
   overflow: hidden;
   padding-top: 5rem;
+  overflow-x: hidden;
+
+  @media (min-width: 55em) {
+    top: 15%;
+  }
+
   &__header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1rem;
-      .joel {
-        border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5rem;
+    gap: 1rem;
+    .joel {
+      border-radius: 10px 50px 50px 10px;
       position: relative;
       background: $dark;
       box-shadow: 0 12px 15px $accent-bright, 0 20px 72px $accent-dark;
+
+      @media (min-width: 35em) {
+        width: 80%;
+      }
+
+      @media (min-width: 55em) {
+        width: 80%;
+      }
       &__curve {
         position: absolute;
-        top: 30px;
-        top: -10px;
-        left: 20px;
-        width: 33%;
-        height: 120%;
+        bottom: 20px;
+        top: 2px;
+        left: 15px;
+        width: 23%;
+        height: 100%;
         border-left: 2px solid $accent-bright;
         border-radius: 50%;
         transform: rotate(-20deg);
         box-shadow: 0 8px 32px 0 $light-gray;
 
-    }
+        @media (min-width: 25em) {
+          top: -5px;
+          width: 32%;
+          height: 110%;
+        }
+
+        @media (min-width: 35em) {
+            top: -30px;
+            width: 25%;
+            height: 125%;
+        }
+      }
       &__infos {
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 1rem;
+        // font-size: 1.6rem;
         font-size: 0.8rem;
-        // font-size: 1rem;
         padding: 1rem;
 
+        @media (min-width: 35em) {
+            font-size: 1.4rem;
+        }
+
+        
       }
       &__img {
-        width: 80%;
-        height: 100%;
+        width: 80px;
+        height: 100px;
         border-radius: 50%;
         border-right: 2px solid $accent-dark;
-        @media (min-width: 400px) {
+
+        @media (min-width: 25em) {
           & {
             width: 150px;
             height: 150px;
           }
         }
+
+        @media (min-width: 35em) {
+            margin-right: 2rem;
+            width: 140px;
+            height: 180px;
+        }
+
+
       }
       &__col {
         display: flex;
@@ -68,6 +110,83 @@
           color: $white;
         }
       }
+    }
+  }
+  &__timeline {
+    min-width: 18.75rem;
+    max-width: 50rem;
+    margin: auto;
+    & span {
+      font-size: 2rem;
+
+      @media (min-width: 35em) {
+        font-size: 3rem;
+      }
+    }
+    &--content {
+      font-size: 1em;
+      line-height: 1.75em;
+      border-top: 3px solid;
+      border-image: linear-gradient(
+        to right,
+        $accent-dark 0%,
+        $light-gray 50%,
+        $accent-bright 100%
+      );
+      border-image-slice: 1;
+      border-width: 3px;
+      margin: 0;
+      padding: 40px;
+      counter-increment: section;
+      position: relative;
+      color: $white;
+
+      @media (min-width: 35em) {
+        
+      }
+
+      &:before {
+        content: counter(section);
+        position: absolute;
+        border-radius: 50%;
+        padding: 10px;
+        height: 2.5em;
+        width: 2.5em;
+        background-color: $dark;
+        text-align: center;
+        line-height: 1.25em;
+        color: $accent-bright;
+        font-size: 1em;
+      }
+    }
+    p:nth-child(odd) {
+      border-right: 3px solid;
+      padding-left: 0;
+
+      &:before {
+        left: 100%;
+        margin-left: -20px;
+      }
+    }
+    //even number borders
+    p:nth-child(even) {
+      border-left: 3px solid;
+      padding-right: 0;
+
+      &:before {
+        right: 100%;
+        margin-right: -20px;
+      }
+    }
+    //handle first and last
+    p:first-child {
+      border-top: 0;
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+    p:last-child {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 }
