--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -4,96 +4,70 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  top: 5%;
+  top: 0.5%;
   background: $dark-gray;
   color: $white;
   padding: 1rem;
   overflow: hidden;
-  padding-top: 5rem;
+  //   padding-top: 5rem;
   overflow-x: hidden;
 
+  @media (min-width: 25em) {
+    top: 3%;
+  }
+
   @media (min-width: 55em) {
-    top: 15%;
+    top: 10%;
   }
 
   &__header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 5rem;
     gap: 1rem;
     .joel {
-      border-radius: 10px 50px 50px 10px;
+      border-radius: 10px;
       position: relative;
-      background: $dark;
-      box-shadow: 0 12px 15px $accent-bright, 0 20px 72px $accent-dark;
-
-      @media (min-width: 35em) {
-        width: 80%;
-      }
-
-      @media (min-width: 55em) {
-        width: 80%;
-      }
+      background: $dark-gray;
+      //   box-shadow: 0 8px 32px $box-shadow-yellow, 2px 20px 72px $box-shadow-blue;
+      box-shadow: -1px 28px 10px -18px $accent-dark inset;
+      -webkit-box-shadow: -1px 28px 10px -18px $accent-dark inset;
+      -moz-box-shadow: -1px 28px 10px -18px $accent-dark inset;
       &__curve {
         position: absolute;
-        bottom: 20px;
-        top: 2px;
-        left: 15px;
-        width: 23%;
-        height: 100%;
+        // top: 30px;
+        top: -10px;
+        left: 20px;
+        width: 25%;
+        height: 120%;
         border-left: 2px solid $accent-bright;
         border-radius: 50%;
         transform: rotate(-20deg);
-        box-shadow: 0 8px 32px 0 $light-gray;
-
-        @media (min-width: 25em) {
-          top: -5px;
-          width: 32%;
-          height: 110%;
-        }
-
+        box-shadow: 0 8px 32px 0 $accent-dark;
         @media (min-width: 35em) {
-            top: -30px;
-            width: 25%;
-            height: 125%;
+          width: 35%;
         }
       }
       &__infos {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 1rem;
-        // font-size: 1.6rem;
-        font-size: 0.8rem;
+        gap: 15px;
+        font-size: 1rem;
+        // font-size: 1rem;
         padding: 1rem;
-
-        @media (min-width: 35em) {
-            font-size: 1.4rem;
-        }
-
-        
       }
       &__img {
-        width: 80px;
+        width: 100px;
         height: 100px;
         border-radius: 50%;
-        border-right: 2px solid $accent-dark;
-
-        @media (min-width: 25em) {
+        border-right: 2px solid $light-gray;
+        @media (min-width: 400px) {
           & {
             width: 150px;
             height: 150px;
           }
         }
-
-        @media (min-width: 35em) {
-            margin-right: 2rem;
-            width: 140px;
-            height: 180px;
-        }
-
-
       }
       &__col {
         display: flex;
@@ -140,10 +114,6 @@
       counter-increment: section;
       position: relative;
       color: $white;
-
-      @media (min-width: 35em) {
-        
-      }
 
       &:before {
         content: counter(section);
