--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -30,9 +30,9 @@
       position: relative;
       background: $dark-gray;
       //   box-shadow: 0 8px 32px $box-shadow-yellow, 2px 20px 72px $box-shadow-blue;
-      box-shadow: -1px 28px 10px -18px $accent-dark inset;
-      -webkit-box-shadow: -1px 28px 10px -18px $accent-dark inset;
-      -moz-box-shadow: -1px 28px 10px -18px $accent-dark inset;
+    //   box-shadow: -1px 28px 10px -18px $accent-dark inset;
+    //   -webkit-box-shadow: -1px 28px 10px -18px $accent-dark inset;
+    //   -moz-box-shadow: -1px 28px 10px -18px $accent-dark inset;
       &__curve {
         position: absolute;
         // top: 30px;
@@ -44,6 +44,11 @@
         border-radius: 50%;
         transform: rotate(-20deg);
         box-shadow: 0 8px 32px 0 $accent-dark;
+
+        @media (max-width: 19em) {
+            display: none;
+        }
+
         @media (min-width: 35em) {
           width: 35%;
         }
@@ -52,7 +57,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 15px;
+        gap: 30px;
         font-size: 1rem;
         // font-size: 1rem;
         padding: 1rem;
