finished styling mobile first projects

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -213,7 +213,7 @@ ul {
   cursor: pointer;
   padding: var(--underline-gap, 1rem) 0;
   border: 0;
-  border-bottom: 0.2rem solid $light-gray;;
+  border-bottom: 0.2rem solid $light-gray;
   background-color: transparent;
 }
 
@@ -384,6 +384,8 @@ ul {
   filter: blur(3rem);
   
 }
+
+
 
 /***********************/
 /** LAYOUT COMPONENTS **/
