--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -15,12 +15,21 @@
     font-size: 3rem;
   }
 
+  &__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+
   &__card {
     background: $dark-gray;
     overflow: hidden;
     border-radius: 25px;
     width: 300px;
     margin: 1rem 2rem 1rem 2rem;
+
   }
 
   &__header {
