--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -89,7 +89,8 @@
 #twitter:focus,
 #linkedin:hover,
 #linkedin:focus {
-  transform: scale(1.2)
+  transform: scale(1.2);
+  
 }
 
 #twitter:active,
