--- a/src/assets/styles/faq.scss
+++ b/src/assets/styles/faq.scss
@@ -1,1 +1,86 @@
 @import './base.scss';
+
+.faq {
+  position: relative;
+  background-color: $dark-gray;
+  color: $white;
+  padding: 1rem;
+  overflow: hidden;
+  min-height: 100%;
+  margin-inline: auto;
+  padding-top: 5rem;
+
+  @media (min-width: 55em) {
+    max-width: 90%;
+  }
+
+  &__wrap {
+    padding: 3rem 4.5%;
+    &--title {
+      display: flex;
+      justify-content: center;
+
+      font-weight: 400;
+      font-size: 4rem;
+      color: $accent-bright;
+    }
+
+    &--subtitle {
+        display: flex;
+        justify-content: center;
+      font-size: 1.7rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+  }
+
+  .question {
+    position: relative;
+    border-bottom: 1px solid $gray;
+    padding: 24px 0 24px 0;
+
+    h3 {
+      cursor: pointer;
+      font-size: 1.4rem;
+      color: $light-gray;
+      font-weight: 400;
+    }
+
+    &__wrap {
+      display: grid;
+      grid-template-columns: 26px auto;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    &__answer {
+      font-size: 1rem;
+      margin: 20px 0;
+      max-width: 40em;
+      color: $white;
+      display: none;
+    }
+
+    &__status {
+      cursor: pointer;
+      width: 26px;
+      height: 26px;
+      background: transparent;
+      border: 3px solid $accent-dark;
+      border-radius: 50%;
+      margin-top: 2px;
+      transition: all 0.2s ease-in-out;
+    }
+
+    &.open .question__answer {
+      display: block;
+    }
+
+    &.open .question__status {
+      color: $accent-bright;
+      background: $accent-bright;
+      outline: 1px solid $light-gray;
+      outline-offset: 2px;
+    }
+  }
+}
