--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -15,7 +15,7 @@ $white: #fefeff;
 /* ACCENT COLORS */
 $accent-bright: #d2042d;
 $accent-dark: #770219;
-:root {
+
   /* MINIMALIST COLORS */
 
   /* 80S COLORS */
@@ -52,295 +52,385 @@ $accent-dark: #770219;
   $ff-sans-main: 'Lato', sans-serif;
   $ff-sans-alt: 'Quicksand', sans-serif;
 
+  /********************/
+  /*     CSS Reset    */
+  /********************/
 
-/********************/
-/*     CSS Reset    */
-/********************/
-
-/* Box sizing */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Reset margins */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-weight: 400;
-}
-
-body {
-  font-family: $ff-sans-main;
-  font-size: 1rem;
-  color: $white;
-  background-color: $dark-gray;
-  line-height: 1.5;
-  min-height: 100vh;
-
-  display: grid;
-  grid-template-rows: min-content 1fr;
-
-  overflow-x: hidden;
-}
-
-/* make form elements easier to work with */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-li,
-ul {
-  list-style: none;
-}
-
-/* remove animations for people who've turned them off */
-@media (prefers-reduced-motion: reduce) {
-
+  /* Box sizing */
   *,
   *::before,
   *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
+    box-sizing: border-box;
   }
-}
 
-/* ------------------- */
-/* Utility classes     */
-/* ------------------- */
-
-/* ACCESS*/
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  /* added line */
-  border: 0;
-}
-
-.skip-to-content {
-  position: absolute;
-  z-index: 9999;
-  background: $white;
-  color: $dark;
-  padding: 0.5em 1em;
-  margin-inline: auto;
-  transform: translateY(-100%);
-  transition: transform 250ms ease-in;
-  &:focus {
-    transform: translateY(0);
+  /* Reset margins */
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p,
+  figure,
+  picture {
+    margin: 0;
   }
-}
 
-/* TYPOGRAPHY */
-.ff-sans-alt {
-  font-family: $ff-sans-alt;
-}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    font-weight: 400;
+  }
 
-.ff-sans-main {
-  font-family: $ff-sans-main;
-}
+  body {
+    font-family: $ff-sans-main;
+    font-size: 1rem;
+    color: $white;
+    background-color: $dark-gray;
+    line-height: 1.5;
+    min-height: 100vh;
+    scroll-behavior: smooth;
+    display: grid;
+    grid-template-rows: min-content 1fr;
 
-.letter-spacing-1 {
-  letter-spacing: 4.75px;
-}
+    overflow-x: hidden;
+  }
 
-.letter-spacing-2 {
-  letter-spacing: 2.7px;
-}
+  /* make form elements easier to work with */
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
+  }
 
-.letter-spacing-3 {
-  letter-spacing: 2.35px;
-}
+  html {
+    scroll-behavior: smooth;
+  }
 
-.uppercase {
-  text-transform: uppercase;
-}
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-.numbered-title {
-  font-family: $ff-sans-main;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: 4.72px;
-}
+  li,
+  ul {
+    list-style: none;
+  }
 
-.numbered-title span {
-  margin-right: 0.5em;
-  font-weight: 700;
-  color: $light-gray;
-}
+  /* remove animations for people who've turned them off */
+  @media (prefers-reduced-motion: reduce) {
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
 
+  /* ------------------- */
+  /* Utility classes     */
+  /* ------------------- */
 
+  /* ACCESS*/
 
-/************************/
-/* UNIVERSAL COMPONENTS */
-/************************/
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    /* added line */
+    border: 0;
+  }
 
-.underline-indicators>* {
-  cursor: pointer;
-  padding: var(--underline-gap, 1rem) 0;
-  border: 0;
-  border-bottom: 0.2rem solid $light-gray;
-  background-color: transparent;
-}
+  .skip-to-content {
+    position: absolute;
+    z-index: 9999;
+    background: $white;
+    color: $dark;
+    padding: 0.5em 1em;
+    margin-inline: auto;
+    transform: translateY(-100%);
+    transition: transform 250ms ease-in;
+    &:focus {
+      transform: translateY(0);
+    }
+  }
 
-.underline-indicators>*:hover,
-.underline-indicators>*:focus {
-  border-image: linear-gradient(90deg,
-      $accent-bright 0%,
-      $accent-dark 100%);
-  border-image-slice: 1;
-}
+  /* TYPOGRAPHY */
+  .ff-sans-alt {
+    font-family: $ff-sans-alt;
+  }
 
-.underline-indicators>.active,
-.underline-indicators>[aria-selected='true'] {
-  color: $white;
-  border-color: $white
-}
+  .ff-sans-main {
+    font-family: $ff-sans-main;
+  }
 
-.tab-list {
-  --gap: 2rem;
-}
+  .letter-spacing-1 {
+    letter-spacing: 4.75px;
+  }
 
-/* DOT INDICATORS */
+  .letter-spacing-2 {
+    letter-spacing: 2.7px;
+  }
 
-.dot-indicators>* {
-  cursor: pointer;
-  border: 0;
-  border-radius: 50%;
-  padding: 0.5em;
-  background-color: var(--gray);
-}
+  .letter-spacing-3 {
+    letter-spacing: 2.35px;
+  }
 
-.dot-indicators>*:hover,
-.dot-indicators>*:focus {
-  background-color: $accent-dark;
-}
+  .uppercase {
+    text-transform: uppercase;
+  }
 
-.dot-indicators>[aria-selected='true'] {
-  background-color: $accent-bright;
-}
+  .numbered-title {
+    font-family: $ff-sans-main;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: 4.72px;
+  }
 
-/* NUMBERS INDICATORS */
+  .numbered-title span {
+    margin-right: 0.5em;
+    font-weight: 700;
+    color: $light-gray;
+  }
 
-.numbers-indicators {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
-  margin: 2rem;
-}
+  /************************/
+  /* UNIVERSAL COMPONENTS */
+  /************************/
 
-.numbers-indicators>* {
-  cursor: pointer;
-  position: relative;
-  place-items: center;
-  padding: 0 2rem;
-  border-radius: 50%;
-  aspect-ratio: 1;
-  background-color: $dark;
-  color: $white;
-  border: 2.5px solid $white;
-}
+  .underline-indicators > * {
+    cursor: pointer;
+    padding: var(--underline-gap, 1rem) 0;
+    border: 0;
+    border-bottom: 0.2rem solid $light-gray;
+    background-color: transparent;
+  }
 
-.numbers-indicators>*:hover,
-.numbers-indicators>*:focus {
-  border-color: $accent-dark;
-}
+  .underline-indicators > *:hover,
+  .underline-indicators > *:focus {
+    border-image: linear-gradient(90deg, $accent-bright 0%, $accent-dark 100%);
+    border-image-slice: 1;
+  }
 
-.numbers-indicators>[aria-selected='true'] {
-  background-color: $light-gray;
-  color: $accent-dark;
-  border-color: $accent-bright;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
+  .underline-indicators > .active,
+  .underline-indicators > [aria-selected='true'] {
+    color: $white;
+    border-color: $white;
+  }
 
-/* Components have larger pieces and more chunks to them */
+  .tab-list {
+    --gap: 2rem;
+  }
 
-/* GRADIENT TEXT */
-.gradient-text {
-  background-image: linear-gradient(45deg,
+  /* DOT INDICATORS */
+
+  .dot-indicators > * {
+    cursor: pointer;
+    border: 0;
+    border-radius: 50%;
+    padding: 0.5em;
+    background-color: var(--gray);
+  }
+
+  .dot-indicators > *:hover,
+  .dot-indicators > *:focus {
+    background-color: $accent-dark;
+  }
+
+  .dot-indicators > [aria-selected='true'] {
+    background-color: $accent-bright;
+  }
+
+  /* NUMBERS INDICATORS */
+
+  .numbers-indicators {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 2rem;
+  }
+
+  .numbers-indicators > * {
+    cursor: pointer;
+    position: relative;
+    place-items: center;
+    padding: 0 2rem;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    background-color: $dark;
+    color: $white;
+    border: 2.5px solid $white;
+  }
+
+  .numbers-indicators > *:hover,
+  .numbers-indicators > *:focus {
+    border-color: $accent-dark;
+  }
+
+  .numbers-indicators > [aria-selected='true'] {
+    background-color: $light-gray;
+    color: $accent-dark;
+    border-color: $accent-bright;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  /* Components have larger pieces and more chunks to them */
+
+  /* GRADIENT TEXT */
+  .gradient-text {
+    background-image: linear-gradient(
+      45deg,
       $accent-bright,
       $white,
       $accent-dark,
-      $light-gray);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  background-size: 300%;
-  background-position: -100%;
-  animation: animatedText 7s infinite alternate-reverse;
-  @keyframes animatedText {
-  from {
-    background-position: 0%;
+      $light-gray
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    background-size: 300%;
+    background-position: -100%;
+    animation: animatedText 7s infinite alternate-reverse;
+    @keyframes animatedText {
+      from {
+        background-position: 0%;
+      }
+
+      to {
+        background-position: 100%;
+      }
+    }
   }
 
-  to {
-    background-position: 100%;
+  /***********************/
+  /** LAYOUT COMPONENTS **/
+  /***********************/
+  .grid-container {
+    text-align: center;
+    display: grid;
+    place-items: center;
+    padding-inline: 1rem;
+    padding-bottom: 4rem;
   }
-}
-}
 
+  .grid-container * {
+    max-width: 50ch;
+  }
 
-
-
-
-/***********************/
-/** LAYOUT COMPONENTS **/
-/***********************/
-.grid-container {
-  text-align: center;
-  display: grid;
-  place-items: center;
-  padding-inline: 1rem;
-  padding-bottom: 4rem;
-}
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-.numbered-title {
-  grid-area: title;
-}
-
-@media (min-width: 35em) {
   .numbered-title {
-    justify-self: start;
-    margin-top: 2rem;
+    grid-area: title;
+  }
+
+  @media (min-width: 35em) {
+    .numbered-title {
+      justify-self: start;
+      margin-top: 2rem;
+    }
+  }
+
+
+.coolCircleEyeButton {
+  position: relative;
+  display: inline-block;
+  .textcircle {
+    display: block;
+    width: 250px;
+    animation: rotate 15s linear infinite;
+    text {
+      font-size: 32px;
+      text-transform: uppercase;
+      fill: $accent-bright;
+    }
+  }
+  @keyframes rotate {
+    to {
+      transform: rotate(-360deg);
+    }
+  }
+  &:hover {
+    text {
+      font-weight: 500;
+    }
+    .eye__inner,
+    .eye__iris,
+    .eye__lashes-up {
+      animation: hide 2s step-end infinite;
+      @keyframes hide {
+        0% {
+          opacity: 0;
+        }
+        10% {
+          opacity: 1;
+        }
+      }
+    }
+    .eye__lashes-down {
+      animation: show 2s step-end infinite;
+
+      @keyframes show {
+        0% {
+          opacity: 1;
+        }
+
+        10% {
+          opacity: 0;
+        }
+      }
+    }
   }
 }
+
+.eye {
+  position: absolute;
+  // z-index: 2;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  &__outer,
+  &__inner,
+  &__lashes-up,
+  &__lashes-down {
+    stroke: $accent-bright;
+    fill: none;
+    stroke-width: 1.5px;
+  }
+  &__lashes-down {
+    opacity: 0;
+  }
+}
+
+.coolFunnyLink {
+  position: relative;
+  svg {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    stroke-width: 3px;
+    width: 95px;
+    path {
+      stroke-dasharray: 1;
+      stroke-dashoffset: 1;
+      transition: stroke-dashoffset 0.6s cubic-bezier(0.7, 0, 0.3, 1);
+    }
+  }
+  &:hover {
+    svg path {
+      stroke-dashoffset: 0;
+      transition-timing-function: cubic-bezier(0.8, 1, 0.7, 1);
+    }
+  }
 }
