--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -32,12 +32,17 @@
   }
 
   .form {
+       @media (min-width: 50rem) {
+        width: 90%;
+      }
+    
     &__flex {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 1rem;
       margin-bottom: 2rem;
+
       textarea {
         width: 100%;
         background: transparent;
@@ -59,6 +64,12 @@
       gap: 0.5rem;
       font-size: 1.3rem;
       font-weight: 500;
+
+      @media (min-width: 35em) {
+        flex-direction: row;
+        width: 100%;
+        justify-content: flex-start;
+      }
 
       input {
         font-size: 1rem;
@@ -151,6 +162,15 @@
     flex-wrap: wrap;
     gap: 2rem;
     margin: -1rem auto 2rem;
+
+    @media (min-width: 35em) {
+      flex-direction: row;
+    } 
+    
+    @media (min-width: 50rem) {
+        width: 90%;
+        gap: 6rem;
+    }
     &--item {
       position: relative;
       display: flex;
@@ -160,8 +180,8 @@
       gap: 1rem;
 
       img {
-        width: 70px;
-        height: 90px;
+        width: 80px;
+        height: 100px;
         object-fit: cover;
         border-radius: 50%;
       }
@@ -180,26 +200,31 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 3rem;
+    margin-inline: auto;
     padding-bottom: 3rem;
     & {
-      font-size: 25px;
+      font-size: 1.3rem;
     }
   }
   &__footer {
-    position: absolute;
+    position: relative;
     bottom: 1rem;
     left: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    &-link {
+    gap: 1rem;
+
+    @media (min-width: 35em) {
+      flex-direction: row;
+    }
+
+    &--link {
       width: 100%;
       text-align: center;
-      font-size: 20px;
-      @media (max-width: 900px) {
-        font-size: 14px;
-      }
+      font-size: 0.5rem;
     }
   }
 }
