--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -434,3 +434,22 @@ $accent-dark: #770219;
     }
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: $dark-gray;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px black;
+  background-image: linear-gradient($dark-gray 0%, $dark 100%);
+}
+
+::-webkit-scrollbar-thumb {
+  background: $accent-dark;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient($accent-dark 1.84%, $accent-bright 102.67%);
+}
