--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -8,17 +8,12 @@
 .webgl {
   position: absolute;
   top: 0;
-  margin-top: 3rem;
   left: 0;
   outline: none;
   mix-blend-mode: exclusion;
 }
 
-
-
 /* LANDING PAGE */
-
-
 
 .landing-container {
   height: 100vh;
@@ -61,8 +56,6 @@
   cursor: pointer;
 }
 
-
-
 #github,
 #twitter,
 #linkedin,
@@ -71,16 +64,15 @@
   font-size: 3rem;
   background-color: #18191f;
   color: $white;
-  box-shadow: 2px 2px 2px #D2042D, 2px 1px 12px #D2042D,
-    2px 2px 10px #D2042D, 2px 2px 3px #D2042D, inset 2px 2px 10px #D2042D,
-    inset 2px 2px 10px #D2042D, inset 2px 2px 10px #D2042D,
-    inset 2px 2px 10px #D2042D;
+  box-shadow: 2px 2px 2px #d2042d, 2px 1px 12px #d2042d, 2px 2px 10px #d2042d,
+    2px 2px 3px #d2042d, inset 2px 2px 10px #d2042d, inset 2px 2px 10px #d2042d,
+    inset 2px 2px 10px #d2042d, inset 2px 2px 10px #d2042d;
   border-radius: 25%;
   padding: 11px 19px;
   margin: 0 40px;
   animation: social 3s linear infinite;
-  text-shadow: 0 0 50px $accent-bright, 0 0 100px $accent-bright, 0 0 150px $accent-bright,
-    0 0 200px $accent-bright;
+  text-shadow: 0 0 50px $accent-bright, 0 0 100px $accent-bright,
+    0 0 150px $accent-bright, 0 0 200px $accent-bright;
 }
 
 #github:hover,
@@ -94,7 +86,6 @@
 #linkedin:hover,
 #linkedin:focus {
   transform: scale(1.2);
-  
 }
 
 #twitter:active,
@@ -102,7 +93,7 @@
 #github:active,
 #codepen:active,
 #linkedin:active {
-  transform: scale(0.8)
+  transform: scale(0.8);
 }
 
 #twitter {
@@ -166,7 +157,6 @@
     justify-content: center;
     align-items: center;
     gap: 5rem;
-
   }
 
   .social-media {
@@ -187,9 +177,4 @@
   .large-button {
     margin-bottom: 3rem;
   }
-}
-
-.test {
-  background-color: green;
-  margin-bottom: 4rem;
 }
